kubernetes/seaweedfs/httproute-ente-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ente-s3
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: "ddns.yuha0.com"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - ente-s3.yuha0.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ente
    backendRefs:
    - name: seaweedfs-s3
      port: 8333
    timeouts:
      request: 0s
